# Astraea-Engine

./: .gitignore  CMakeLists.txt  README.md  model.onnx  model.onnx.data  out_gcc.txt  test_compile.cpp
benchmarks/: benchmarks.cpp  order_book_benchmarks.cpp  runtime_benchmarks.cpp
include/: EngineRuntime.hpp  OrderBook.hpp  SPSCQueue.hpp  TensorRTCompiler.hpp  Types.hpp
scripts/: train_and_export.py
src/analytics/: .gitkeep  TensorRTCompiler.cpp  main_compiler.cpp
src/core/: .gitkeep  EngineRuntime.cpp
src/ingestion/: .gitkeep
tests/: order_book_tests.cpp  unit_tests.cpp
